# FirstCPP

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/wangmian/www/firstcpp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: wangmian_www_firstcpp_NativeHelper.cpp  wangmian_www_firstcpp_NativeHelper.h
app/src/main/java/wangmian/www/firstcpp/: MainActivity.java  NativeHelper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/wangmian/www/firstcpp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
